[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Spellbook.gd" type="Script" id=1]
[ext_resource path="res://UI/monogram_notification_font.tres" type="DynamicFont" id=2]

[node name="Spellbook" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 192.0
margin_right = -1528.0
margin_bottom = -408.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 320.0
margin_bottom = 472.0

[node name="Label" type="Label" parent="."]
margin_left = 56.0
margin_right = 272.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "Spellbook"
align = 1

[node name="SpellList" type="ItemList" parent="."]
margin_top = 56.0
margin_right = 320.0
margin_bottom = 456.0
custom_fonts/font = ExtResource( 2 )

[node name="QuickwheelSlotMenu" type="PopupMenu" parent="SpellList"]
margin_right = 20.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )

[connection signal="item_activated" from="SpellList" to="." method="_on_SpellList_item_activated"]
